@@ -1,3 +1,6 @@
+2020-02-13  Kirit Saelensminde  <kirit@felspar.com>
+ Deprecate use of some old smart pointers that now have better alternatives.
+
 2020-01-29  Kirit Saelensminde  <kirit@felspar.com>
  Add a faster path for parsing JSON when there are no Unicode escapes.
 
